# agent-hub

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  architecture.md  cost-model.csv  cost-model.md  docker-compose.yml  erd.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  schema.sql  security-design.md
.github/workflows/: playwright-e2e.yml  quality-gates.yml
.well-known/: agent-card.json
agenthub/: __init__.py  cli.py
data/delegations/: balances.json  records.json
docs/: AGENTHUB_COMPREHENSIVE_CONTINUATION_PLAN_2026-02-12.md  AGENT_IDENTITY_RESEARCH_REPORT_2026-02-14.md  DELIVERABLE_LOG.md  RESEARCH_INSIGHTS.md  agenthub-master-plan-v1.2.docx  agenthub-master-plan.backup-before-v1.2.docx  agenthub-master-plan.backup-before-validation.docx  agenthub-master-plan.docx
tests/: conftest.py  test_identity_comprehensive.py  test_s138_discovery.py  test_s139_approval.py  test_s140_intent.py  test_s141_grants.py  test_s142_scim.py  test_s143_audit.py  test_s144_access_review.py  test_s145_policy_code.py  test_s146_sessions.py  test_s147_vault.py  test_s148_entitlements.py  test_s149_rbac.py  test_s150_key_management.py  test_s151_consent.py  test_s152_agent_groups.py  test_s153_rate_policies.py  test_s154_credential_binding.py  test_s155_activity_monitor.py  test_s156_env_access.py  test_s157_scope_narrowing.py  test_s158_ip_allowlist.py  test_s159_capability_quotas.py  test_s161_chain_viz.py  test_s162_policy_sim.py  test_s78_integration.py  test_s83_production_hardening.py  test_s91_deep_fixes.py
(+495 files in other folders)
